...
    <string name="settings">Settings</string>
    <string name="no_internet_45">Please connect to internet to update data.</string>
    <string name="gender">लिंग</string>
    <string name="category">वर्ग</string>
    <string name="download_complete">Download Complete</string>
    <string name="english">English</string>
    <string name="fill_forms">Fill Forms</string>
    <string name="about_us_summary" translatable="false">Saksham Samiksha application is a product of the Department of School Education, Haryana Government.  The application will be used to record observations of academic and non-academic nature from school visits across the state.</string>
    <string name="need_help">Need Help?</string>
    <string name="select_language_english">Please select your language</string>
    <string name="product_image">back</string>
    <string name="select_language_hindi">कृपया अपनी भाषा चुनें</string>
    <string name="please_select_forms">Choose Forms</string>
    <string name="submit_saved_forms">Submit Saved Forms</string>
    <string name="click_on_the_pdf_icon_to_download_the_pdf_report">Click on the PDF Icon to download the PDF Report</string>
...
